@@ -7,43 +7,31 @@
  *--------------------------------------------------------------------------
  */
 
-/* $Format: "#define IS_STABLE_BRANCH ($ReleaseMinor$ % 2 == 0)"$ */
 #define IS_STABLE_BRANCH ($VersionMinor$ % 2 == 0)
 
 #define IS_DEV_BRANCH    (!IS_STABLE_BRANCH)
 
-/* $Format: "#define IS_DEVELOPMENT (!strcmp(\"$ReleaseType$\", \"dev\"))"$ */
 #define IS_DEVELOPMENT (!strcmp("$VersionType$", "dev"))
 
-/* $Format: "#define IS_MAINTENANCE (!strcmp(\"$ReleaseType$\", \"maint\"))"$ */
 #define IS_MAINTENANCE (!strcmp("$VersionType$", "maint"))
 
-/* $Format: "#define RELEASE_TYPE \"$ReleaseType$\""$ */
 #define RELEASE_TYPE "$VersionType$"
 
-/* $Format: "#define RELEASE_DATE \"$ProjectDate$\""$ */
 #define RELEASE_DATE "$VersionDate$"
 
-/* $Format: "#define PROJ_VERSION \"$ProjectVersion$\""$ */
 #define PROJ_VERSION "Build $VersionRevision$"
 
-/* $Format: "#define DRIVER_VERSION \"$ReleaseVersion$\""$ */
 #define DRIVER_VERSION "$VersionMajor$.$VersionMinor$.$VersionMicro$"
 
-/* $Format: "#define VERSION_MAJOR \"$ReleaseMajor$\""$ */
 #define VERSION_MAJOR "$VersionMajor$"
 
-/* $Format: "#define VERSION_MINOR \"$ReleaseMinor$\""$ */
 #define VERSION_MINOR "$VersionMinor$"
 
-/* $Format: "#define VERSION_MICRO \"$ReleaseMicro$\""$ */
 #define VERSION_MICRO "$VersionMicro$"
 
-/* $Format: "#define LOCAL_LEVEL \"\""$ */
 #define LOCAL_LEVEL ""
 
 /* TODO: Add something like the perl local patchlevel management. */
 /* TODO: Add LPC defines for the various version number parts */
 
 #endif /* PATCHLEVEL_H__ */
-
