@@ -16,6 +16,7 @@ See the file HISTORY for a user-oriented summary of all the changes.
       recognized and treated as double-fatal (Bug #408).
   - (interpret.c) free_svalue() now recognizes the free of nested
       structures and de-serializes them to avoid stack overflows (Bug #416).
+  - (Makefile.in, version.sh, patchlevel.h.in) Removed PRCS support.
 
 24-Nov-2005  (Gnomi)
   - (actions.c) When re-using a sentence structure for marker_sent,
